--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_tutor.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_tutor.xml
@@ -92,51 +92,29 @@
         android:textSize="18sp" />
 
 
-    <TextView
-        android:id="@+id/txt_provId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txt_phone"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="10dp"
-        android:gravity="center"
-        android:text="Provider ID:"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/txt_providerId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txt_cellphone"
-        android:layout_toEndOf="@id/txt_provId"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:text="Provider ID"
-        android:textSize="18sp" />
-
     <Button
         android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txt_providerId"
-        android:layout_marginTop="5dp"
+        android:layout_below="@+id/txt_phone"
+        android:layout_marginTop="75dp"
         android:background="@color/colorBlue"
-        android:textColor="@color/colorWhite"
-        android:textSize="18sp"
         android:onClick="cerrarSesion"
-        android:text="Cerrar Sesion" />
+        android:text="Cerrar Sesion"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/btn_verRegistros"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_logout"
+        android:layout_marginTop="20dp"
         android:background="@color/colorBlue"
-        android:textColor="@color/colorWhite"
-        android:layout_marginTop="10dp"
-        android:textSize="18sp"
         android:onClick="irRegistros"
-        android:text="Ver Registro" />
+        android:text="Ver Registros"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp" />
 
 
 </RelativeLayout>
