--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,17 +7,55 @@
     android:orientation="vertical"
     tools:context=".Perfil">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="iniciarTutor"
-        android:text="Tutor" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="iniciarAsistente"
-        android:text="Asistente" />
-</LinearLayout>
+        app:srcCompat="@drawable/fondo" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginEnd="15dp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/colorWhite"
+            android:text="@string/Perfil_user"
+            android:textSize="25dp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="15dp"
+            android:textSize="25dp"
+            android:background="@color/colorTutor"
+            android:onClick="iniciarTutor"
+            android:text="Tutor" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="30dp"
+            android:textSize="25dp"
+            android:layout_marginEnd="15dp"
+            android:background="@color/colorAsistente"
+            android:onClick="iniciarAsistente"
+            android:text="Asistente" />
+
+    </LinearLayout>
+
+</RelativeLayout>
