--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_formulario_curso.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_formulario_curso.xml
@@ -7,97 +7,194 @@
     android:orientation="vertical"
     tools:context=".FormularioCurso">
 
-    <EditText
-        android:id="@+id/etNombreCurso"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Nombre de Curso *"
-        android:textSize="20dp"
+        android:layout_height="match_parent">
 
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/etDescripcion"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Descripcion"
-        android:textSize="20dp"
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+                android:textColor="@color/colorDark"
+                android:layout_height="50dp"
+                android:textAlignment="center"
+                android:text="Crear evento"
+                android:textSize="30sp"/>
 
-        />
 
-    <EditText
-        android:id="@+id/etFecha"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Fecha*"
-        android:textSize="20dp"
+            <EditText
+                android:id="@+id/etNombreCurso"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="50dp"
+                android:text="Nombre de Curso *"
+                android:textSize="20sp"
 
-        />
+                />
 
-    <EditText
-        android:id="@+id/etHoraInici0"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Hora de Inicio"
-        android:textSize="20dp"
+            <EditText
+                android:id="@+id/etDescripcion"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Descripcion"
+                android:textSize="20dp"
 
-        />
+                />
 
-    <EditText
-        android:id="@+id/etHoraFin"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Hoa de Fin"
-        android:textSize="20dp"
-        />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/etPermitirRetrasos"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Permitir Retrasos"
-        android:textSize="20dp"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-        />
+                    <TextView
+                        android:id="@+id/etFecha"
+                        android:layout_width="233dp"
+                        android:layout_height="50dp"
+                        android:text="Fecha*"
+                        android:textSize="20sp"/>
 
-    <EditText
-    android:id="@+id/etRangoRetraso"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:text="Rango retraso en minutos "
-    android:textSize="20dp"
+                    <Button
+                        android:id="@+id/btn_Fecha"
+                        android:layout_width="136dp"
+                        android:layout_height="50dp"
+                        android:text="Select Date"
+                        android:textSize="15sp" />
 
-    />
 
-    <EditText
-        android:id="@+id/etMarcarSalida"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Marcar Salida"
-        android:textSize="20dp"
+                </LinearLayout>
 
-        />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:orientation="vertical"
-        android:visibility="invisible"
-        tools:visibility="invisible">
+                    <TextView
+                        android:id="@+id/etHoraInicio"
+                        android:layout_width="233dp"
+                        android:layout_height="50dp"
+                        android:text="Hora de Inicio*"
+                        android:textSize="20sp"/>
 
-    </LinearLayout>
+                    <Button
+                        android:id="@+id/btn_HoraInicio"
+                        android:layout_width="136dp"
+                        android:layout_height="50dp"
+                        android:text="Select Time"
+                        android:textSize="15sp" />
 
-    <Button
-        android:id="@+id/button3"
-        style="@android:style/Widget.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Guardar "
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:visibility="visible"
-        tools:visibility="visible"
 
-        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/etHoraFin"
+                        android:layout_width="233dp"
+                        android:layout_height="50dp"
+                        android:text="Hora de Fin*"
+                        android:textSize="20sp"/>
+
+                    <Button
+                        android:id="@+id/btn_HoraFin"
+                        android:layout_width="136dp"
+                        android:layout_height="50dp"
+                        android:text="Select Time"
+                        android:textSize="15sp" />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+
+            <EditText
+                android:id="@+id/etTimeRetraso"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="Min. tiempo de retraso (min)"
+                android:textSize="20sp"
+
+                />
+
+            <CheckBox
+                android:id="@+id/box_Retraso"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Permitir Retraso"
+                android:layout_weight="2"
+                android:textColor="@color/colorDark"
+                android:layout_marginTop="15dp"
+                android:textSize="20sp"
+                />
+
+
+
+            <TextView
+                android:id="@+id/textAnuncio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:textColor="@color/colorDark"
+                android:text="@string/Marcar_Zona"
+                android:textAlignment="center"
+                android:textSize="15sp"/>
+
+
+
+            <Button
+                android:id="@+id/btn_Ubicacion1"
+                style="@android:style/Widget.Button"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_marginTop="30dp"
+                android:onClick="ubicarZona"
+                android:text="Punto 1" />
+
+            <Button
+                android:id="@+id/btn_Ubicacion2"
+                style="@android:style/Widget.Button"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_marginTop="30dp"
+                android:onClick="ubicarZona"
+                android:text="Punto 2" />
+
+            <Button
+                android:id="@+id/btn_Guardar"
+                style="@android:style/Widget.Button"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginBottom="80dp"
+                android:onClick="Guardar"
+                android:text="Guardar "
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_marginTop="30dp"/>
+
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
+
 
 
 </LinearLayout>
