--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
@@ -39,9 +39,9 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="15dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:background="@color/colorTutor"
-            android:onClick="iniciarTutor"
+            android:onClick="startTutor"
             android:text="Tutor" />
 
         <Button
@@ -50,10 +50,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_marginEnd="15dp"
             android:background="@color/colorAsistente"
-            android:onClick="iniciarAsistente"
+            android:onClick="startAsistente"
             android:text="Asistente" />
 
     </LinearLayout>
