--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_asistente.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_asistente.xml
@@ -68,6 +68,15 @@
                         android:textColor="@color/colorDark"
 
                         />
+                    <TextView
+                        android:id="@+id/txt_viewMatricula"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginStart="10dp"
+                        android:textSize="18sp"
+                        android:text="Matricula:"
+                        android:textColor="@color/colorDark"/>
 
                     <TextView
                         android:id="@+id/txt_ViewLat"
@@ -107,7 +116,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
                         android:gravity="center"
-                        android:text="correo"
+                        android:hint="correo"
                         android:textSize="18sp"
                         android:textColor="@color/colorDark"
 
@@ -120,11 +129,22 @@
                         android:layout_marginEnd="10dp"
                         android:layout_marginTop="30dp"
                         android:gravity="center"
-                        android:text="Phone number"
+                        android:hint="Phone number"
                         android:textSize="18sp"
                         android:textColor="@color/colorDark"
 
                         />
+
+                    <TextView
+                        android:id="@+id/txt_matricula"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:textSize="18sp"
+                        android:gravity="center"
+                        android:textColor="@color/colorDark"
+                        android:hint="matricula" />
 
                     <TextView
                         android:id="@+id/txt_Latitud"
@@ -133,7 +153,7 @@
                         android:layout_marginTop="30dp"
                         android:layout_marginEnd="10dp"
                         android:gravity="center"
-                        android:text="Latitud "
+                        android:hint="Latitud "
                         android:textSize="18sp"
                         android:textColor="@color/colorDark"
 
@@ -146,7 +166,7 @@
                         android:layout_marginTop="30dp"
                         android:layout_marginEnd="10dp"
                         android:gravity="center"
-                        android:text="Longitud "
+                        android:hint="Longitud "
                         android:textSize="18sp"
                         android:textColor="@color/colorDark"
 
@@ -188,7 +208,6 @@
                 android:layout_marginTop="30dp"
                 android:background="@color/colorBlue"
                 android:drawableRight="@android:drawable/checkbox_on_background"
-                android:onClick="Asistir"
                 android:text="Asistir"
                 android:textAlignment="center"
                 android:textColor="@color/colorWhite"
