--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_tutor.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_tutor.xml
@@ -37,7 +37,7 @@
                 android:text="Cedula: "
                 android:textColor="@color/colorDark"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/txt_cedula"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,8 +45,8 @@
                 android:layout_marginTop="40dp"
                 android:layout_toEndOf="@id/text_viewId"
                 android:gravity="center"
-                android:inputType="number"
-                android:minEms="10"
+                android:textSize="18sp"
+                android:hint="cedula/matricula"
                 android:textColor="@color/colorDark"
 
                 />
@@ -84,7 +84,7 @@
                 android:layout_below="@id/txt_cedula"
                 android:layout_marginTop="30dp"
                 android:gravity="center"
-                android:text="correo"
+                android:hint="correo"
                 android:textSize="18sp"
                 android:textColor="@color/colorDark"
 
@@ -112,7 +112,7 @@
                 android:layout_toEndOf="@id/txt_cellphone"
                 android:layout_marginTop="30dp"
                 android:gravity="center"
-                android:text="Phone number"
+                android:hint="Phone number"
                 android:textSize="18sp"
                 android:textColor="@color/colorDark"
 
