Completo asistente y tutor
Completa la accion de poder asistir a un evento, crear un evento, y anexo de la lista de asistencia.

--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_tutor.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_tutor.xml
@@ -34,6 +34,7 @@
                 android:layout_below="@id/txt_nombre"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="40dp"
+                android:textSize="18sp"
                 android:text="Cedula: "
                 android:textColor="@color/colorDark"/>
 
