--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_perfil.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,52 +10,48 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/fondo" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/fondo1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="15dp"
-            android:textStyle="bold"
+            android:gravity="center_horizontal"
+            android:text="@string/Perfil_user"
             android:textAlignment="center"
             android:textColor="@color/colorWhite"
-            android:text="@string/Perfil_user"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
-        <Button
+        <ImageButton
             android:id="@+id/button2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="15dp"
-            android:textSize="25sp"
+            android:layout_gravity="center_horizontal"
             android:background="@color/colorTutor"
             android:onClick="startTutor"
-            android:text="Tutor" />
+            android:src="@drawable/boton_tutor" />
 
-        <Button
+        <ImageButton
             android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="30dp"
-            android:textSize="25sp"
-            android:layout_marginEnd="15dp"
+            android:layout_gravity="center_horizontal"
             android:background="@color/colorAsistente"
             android:onClick="startAsistente"
-            android:text="Asistente" />
+            android:src="@drawable/boton_asistente" />
 
     </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
