--- a/AsistenciaAutomatica/app/src/main/res/layout/activity_lista__asistencia.xml
+++ b/AsistenciaAutomatica/app/src/main/res/layout/activity_lista__asistencia.xml
@@ -15,40 +15,36 @@
         android:textAlignment="center"
         android:textSize="30sp" />
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/TituloAsistente"
-            android:layout_width="211dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:text="Nombre"
+            android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nombre"
-                android:textAlignment="center" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/TituloAxi1"
+        <TextView
+            android:id="@+id/TituloAsiste"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="Estado"
+            android:textAlignment="center" />
+        <TextView
+            android:id="@+id/TituloHoraInicio"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="Hora Inicio"
+            android:textAlignment="center" />
+        <TextView
+            android:id="@+id/TituloHoraFin"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/TituloAsiste"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Asiste"
-                android:textAlignment="center" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="Num. Horas"
+            android:textAlignment="center" />
     </LinearLayout>
 
     <ScrollView
@@ -61,11 +57,21 @@
             android:orientation="horizontal" >
             <LinearLayout
                 android:id="@+id/ContenedorNombre"
-                android:layout_width="211dp"
+                android:layout_width="170dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"/>
             <LinearLayout
-                android:id="@+id/ContenedorAsiste"
+                android:id="@+id/ContenedorEstado"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical" />
+            <LinearLayout
+                android:id="@+id/ContenedorHora"
+                android:layout_width="80dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical" />
+            <LinearLayout
+                android:id="@+id/ContenedorCantHoras"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical" />
